add all crud operations

--- a/public/index.html
+++ b/public/index.html
@@ -42,9 +42,9 @@
         <table class="table table-bordered">
             <thead>
                 <tr class="row">
-                    <th class="col-lg-2">id</th>
-                    <th class="col-lg-5">title</th>
-                    <th class="col-lg-5">content</th>
+                    <th class="col-lg-4">#</th>
+                    <th class="col-lg-4">title</th>
+                    <th class="col-lg-4">content</th>
                 </tr>
             </thead>
             <tbody id="tbody">
